# nlp-document-classification

./: .gitignore  README.md  pyproject.toml
data/presidents/presidents-eval/: corpus.index.test
notebooks/models/: models.pkl  summary_df.pkl
notebooks/rital_project/: presidents.ipynb  project.ipynb  sandbox.ipynb
notebooks/rital_project/movies/: movies.ipynb
notebooks/rital_project/movies/results/: default-tfidf-linearsvc.csv  default-tfidf-logreg.csv  gpt.csv  roberta.csv  tuned-tfidf-linearsvc.csv  tuned-tfidf-logreg.csv
notebooks/rital_project/movies/roberta-model-save/: config.json
notebooks/rital_project/movies/roberta-model/checkpoint-1200/: rng_state.pth  scheduler.pt  trainer_state.json
notebooks/rital_project/movies/roberta-model/checkpoint-400/: rng_state.pth  scheduler.pt  trainer_state.json
notebooks/rital_project/movies/roberta-model/checkpoint-800/: rng_state.pth  scheduler.pt  trainer_state.json
notebooks/rital_project/presidents/: 01-eda.ipynb  02-classifier_on_tfidf.ipynb  03-embeddings.ipynb  04-camembert.ipynb  05-rnn.ipynb  presidents-bert.ipynb  submission-pres-1.csv  train_camembert.py
notebooks/rital_tme/tme01/: rital-proj01-bow.ipynb  rital-tme01-document_classification.ipynb
notebooks/rital_tme/tme02/: 2a-Sequences.ipynb  2b-Clustering.ipynb  crf.model
notebooks/rital_tme/tme03/: 3a-representationLearning.ipynb  3b-Sequences2.ipynb  w2v_tsne.npy
notebooks/rital_tme/tme04/: 4a-RNNs.ipynb  4b_transformers_my_correction_fine_tuning.ipynb
src/rital/: data.py  preprocessing.py
src/rital/movies/: data.py  preprocessing.py
src/rital/presidents/: analysis.py  postprocessing.py  preprocessing.py
