[project]
name = "nlp-document-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-crfsuite>=0.9.12",
    "scikit-learn>=1.8.0",
    "wordcloud>=1.9.6",
]
