[project]
name = "nlp-document-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.3",
    "evaluate>=0.4.6",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "python-crfsuite>=0.9.12",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "unidecode>=1.4.0",
    "wordcloud>=1.9.6",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
